# ngit-grasp

./: .env.example  .gitignore  AGENTS.md  AUDIT_SYSTEM_STATUS_REPORT.md  CHANGELOG.md  COMPILATION_FIXES.md  CURRENT_STATUS.md  Cargo.toml  DOCUMENTATION_CLEANUP_COMPLETE.md  FILES_CREATED.md  FINAL_AUDIT_REPORT.md  FINAL_SUMMARY.md  GRASP_AUDIT_PLAN.md  IMPLEMENTATION_COMPLETE.md  INVESTIGATION_COMPLETE.md  LICENSE  NEXT_SESSION_QUICKSTART.md  PROJECT_STATUS_VISUAL.txt  README.md  REPORT_COMPLIANCE_TESTING.md  SESSION_COMPLETE.md  SESSION_SUMMARY.txt  SMOKE_TEST_REPORT.md  START_HERE.md  TAG_MIGRATION_SUMMARY.md  TEST_VISUAL_SUMMARY.txt  TXT_FILES_CLEANUP_COMPLETE.md  build.rs  flake.nix  next_prompt.md  test_relay.sh
docs/: COMPARISON.md  DECISION_SUMMARY.md  GETTING_STARTED.md  README.md  TEST_STRATEGY.md  purgatory-implementation-plan.md
docs/archive/: 2025-11-03-compliance-test-proposal.md  2025-11-03-documentation-index.md  2025-11-03-grasp-audit-implementation.md  2025-11-03-implementation-complete.md  2025-11-03-quick-reference.md  2025-11-03-review-summary.md  2025-11-03-smoke-test-report.md  2025-11-03-test-breakdown.md  2025-11-03-verification-complete.md  2025-11-04-audit-fix-summary.txt  2025-11-04-audit-system-fixed.md  2025-11-04-cleanup-summary.md  2025-11-04-cleanup-visual-summary.txt  2025-11-04-diataxis-complete.md  2025-11-04-diataxis-migration-visual.txt  2025-11-04-diataxis-migration.md  2025-11-04-flake-migration.md  2025-11-04-nostr-sdk-upgrade.md  2025-11-04-phase1-test-migration.md  2025-11-04-phase2-test-migration.md  2025-11-04-phase2-visual.txt  2025-11-04-phase3-documentation.md  2025-11-04-ready-for-next-phase.md  2025-11-04-session-complete-2.md  2025-11-04-session-continuation.md  2025-11-04-session-summary.md  2025-11-04-tag-migration.md  2025-11-04-test-migration-complete.md  2025-11-04-test-strategy-decision.md  2025-11-04-upgrade-complete.md  2025-11-05-audit-tag-architecture-plan.md  2025-11-05-current-status.md  2025-11-05-grasp01-event-reference-test-design.md  2025-11-05-grasp01-smoke-test-design.md  2025-11-05-grasp01-test-plan.md  2025-11-05-ngit-relay-testing-setup.md  2025-11-05-session-summary.md  2025-11-05-summary.md  2025-11-05-test-lessons.md  2025-11-06-testcontext-demo.sh  (+4 more)
docs/archive/2025-11-04-evening/: 2025-11-04-authorization-flow-diagram.txt  2025-11-04-git-http-backend-deep-dive.md  2025-11-04-git-http-backend-validation.md  2025-11-04-ngit-grasp-implementation-plan.md  INDEX.md  STATUS.txt  (+7 more)
docs/explanation/: README.md  announcements-purgatory-design.md  announcements-purgatory-implementation.md  architecture.md  comparison.md  decisions.md  defensive-analysis-of-other-relays.md  defensive-measures.md  deletion-requests.md  grasp-02-proactive-sync-purgatory-git-data.md  grasp-02-proactive-sync-v2.md  grasp-02-proactive-sync-v3.md  grasp-02-proactive-sync-v4.md  grasp-02-proactive-sync.md  grasp-05-archive.md  grasp-06-contributor-pr-submission.md  inline-authorization.md  monitoring-strategy.md  monitoring.md  purgatory-design.md  purgatory-sync-redesign.md  state-structure-redesign-proposal.md  unify-git-data-sync.md
docs/grafana/: ngit-grasp-dashboard.json
docs/how-to/: README.md  deploy.md  enable-grasp-06.md  migrate-ngit-relay-to-ngit-grasp.md  migrate-to-ngit-grasp.md  nix-flakes.md  production-sync-testing.md  prometheus-setup.md  test-compliance.md  update-git-dependencies.md
docs/learnings/: README.md  grasp-01-implementation.md  grasp-audit.md  nix-flakes.md  nostr-sdk.md
docs/reference/: README.md  configuration.md  git-protocol.md  relay-limits.md  test-strategy.md
docs/tutorials/: README.md  first-audit.md  getting-started.md
grasp-audit/: Cargo.toml  QUICK_START.md  README.md  TAG_MIGRATION.md  flake.nix  shell.nix  test-ngit-relay.sh
grasp-audit/examples/: simple_audit.rs
grasp-audit/src/: audit.rs  client.rs  fixtures.rs  isolation.rs  lib.rs  probe.rs  result.rs
grasp-audit/src/specs/: grasp01_nostr_relay.rs  mod.rs  nip01_smoke.rs
grasp-audit/src/specs/grasp01/: cors.rs  event_acceptance_policy.rs  git_clone.rs  git_filter.rs  mod.rs  nip01_smoke.rs  nip11_document.rs  purgatory.rs  push_authorization.rs  repository_creation.rs  spec_requirements.rs
grasp-audit/src/specs/grasp06/: event_acceptance.rs  fixtures.rs  mirroring.rs  mod.rs  nip11.rs  prs_endpoint.rs  spec_requirements.rs
nix/: example-configuration.nix  module.nix
plans/: grasp-06-implementation-plan.md
scripts/: 40-classify-actions.sh  sanitize-logs.sh
src/: audit_cleanup.rs  cleanup_empty_repos.rs  config.rs  lib.rs  main.rs
src/git/: authorization.rs  handlers.rs  mod.rs  process.rs  protocol.rs  subprocess.rs  sync.rs
src/grasp06/: cleanup.rs  endpoint.rs  fetch.rs  mod.rs  paths.rs  policy.rs  receive.rs
src/http/: landing.rs  mod.rs  nip11.rs  websocket.rs
src/metrics/: bandwidth.rs  connection.rs  mod.rs
src/nostr/: builder.rs  events.rs  mod.rs  relay.rs
src/purgatory/: helpers.rs  mod.rs  persistence.rs  types.rs
src/storage/: mod.rs
src/sync/: algorithms.rs  connection.rs  filter.rs  filters.rs  health.rs  manager.rs  metrics.rs  mod.rs  naughty_list.rs  negentropy.rs  rejected_index.rs  relay_connection.rs  self_subscriber.rs  subscription.rs
templates/: landing.html
tests/: announcement_tests.rs  archive_grasp_services.rs  archive_read_only.rs  cors.rs  git_clone.rs  grasp06_pr_hosting.rs  nip01_compliance.rs  nip11_document.rs  nip34_announcements.rs  nip77_negentropy.rs  proactive_sync_basic.rs  proactive_sync_catchup.rs  proactive_sync_dynamic.rs  proactive_sync_metrics.rs  proactive_sync_multi.rs  proactive_sync_resilience.rs  purgatory.rs  purgatory_persistence.rs  purgatory_sync.rs  push_authorization.rs  repository_creation.rs  state_authorization.rs  sync.rs  test_filter_support.rs
tests/common/: git_server.rs  mock_relay.rs  mod.rs  purgatory_helpers.rs  relay.rs  sync_helpers.rs
tests/sync/: bootstrap.rs  catchup.rs  discovery.rs  historic_sync.rs  live_sync.rs  maintainer_reprocessing.rs  metrics.rs  mod.rs  tag_variations.rs
work/: README.md  phase1-baseline.md
(+32 files in other folders)
