[package]
name = "ngit-grasp"
version = "0.1.0"
edition = "2021"
authors = ["ngit-grasp contributors"]
license = "MIT"
description = "A GRASP (Git Relays Authorized via Signed-Nostr Proofs) implementation in Rust"
repository = "https://gitworkshop.dev/ngit-grasp"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server (hyper for relay integration)
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "0.1"

# Nostr relay
nostr-relay-builder = "0.44"

# Nostr
nostr-sdk = "0.44"
nostr-lmdb = "0.44"

# Utilities
futures-util = "0.3"
base64 = "0.22"
flate2 = "1.0"

# Metrics
prometheus = "0.13"
dashmap = "5"
lazy_static = "1.4"

# Random (for startup jitter)
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Git (for future use)
# git-http-backend = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"
grasp-audit = { path = "grasp-audit" }
url = "2.5"
tempfile = "3"

[lib]
name = "ngit_grasp"
path = "src/lib.rs"

[[bin]]
name = "ngit-grasp"
path = "src/main.rs"

[workspace]
members = [".", "grasp-audit"]
