[package]
name = "grasp-audit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Audit and compliance testing tool for GRASP protocol implementations"
license = "MIT"

[[bin]]
name = "grasp-audit"
path = "src/bin/grasp-audit.rs"

[dependencies]
# Nostr
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "e09c9d82a1778683d2a6b968d09eb2c619883bf3" }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
