[package]
name = "grasp-audit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Audit and compliance testing tool for GRASP protocol implementations"
license = "MIT"

[[bin]]
name = "grasp-audit"
path = "src/bin/grasp-audit.rs"

[dependencies]
# Nostr
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "4767ad13" }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde_json = "1"

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
